Update FIREFOX_17_0_5esr_RELEASE to FIREFOX_24_3_0esr_RELEASE.